force-app/main/default/objects/Zentra_Email_Config__mdt/Zentra_Email_Config__mdt.object-meta.xml
<CustomObject>
    <label>Zentra Email Config</label>
    <pluralLabel>Zentra Email Configs</pluralLabel>
</CustomObject>