force-app/main/default/objects/Zentra_Email_Config__mdt/fields/Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Accent_Color__c</fullName>
    <description>Accent hex color (e.g. #4caf50). Used in Master record only; applied to success callout boxes.</description>
    <label>Accent Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>