force-app/main/default/objects/Zentra_Email_Config__mdt/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank display name shown in email header and subject prefix. Used in Master record only.</description>
    <label>Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>