force-app/main/default/objects/Zentra_Email_Config__mdt/fields/Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Brand_Color__c</fullName>
    <description>Primary brand hex color (e.g. #1a237e). Used in Master record only; applied to header gradient and headings.</description>
    <label>Brand Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>