force-app/main/default/objects/Zentra_Email_Config__mdt/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <description>H2 heading displayed in the email body (e.g. &quot;Account Balance Summary&quot;).</description>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>