force-app/main/default/objects/Zentra_Email_Config__mdt/fields/Intro_Text__c.field-meta.xml
<CustomField>
    <fullName>Intro_Text__c</fullName>
    <description>Introductory paragraph shown after &quot;Dear [Name],&quot; and the heading. Supports basic HTML.</description>
    <label>Intro Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>