force-app/main/default/objects/Zentra_Email_Config__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this email type is active. Set to false to disable sending.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>