force-app/main/default/objects/Zentra_Email_Config__mdt/fields/Subject_Template__c.field-meta.xml
<CustomField>
    <fullName>Subject_Template__c</fullName>
    <description>Email subject line template. Use {0}, {1} as merge tokens for dynamic values (e.g. case number, request number).</description>
    <label>Subject Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>